--- a/drecentlive.html
+++ b/drecentlive.html
@@ -122,7 +122,7 @@
                 </div>
         <div class="profile" style="display: flex; align-items: center; margin-top: -50px;z-index: 9999;">
 <div style="width: 100%; display: flex; flex-direction: column;padding-left:10px; ">
-              <img id="profile-img" src="" alt="Member Profile" style="width: 90px; height: 90px; object-fit: cover; border-radius: 50%; margin-right: 1rem;box-shadow: 2px black; border: 5px solid #171C28 ;">
+              <img id="profile-img" src="assets/watermark.png" alt="Member Profile" style="width: 90px; height: 90px; object-fit: cover; border-radius: 50%; margin-right: 1rem;box-shadow: 2px black; border: 5px solid #171C28 ;">
 
             <div style="margin-top: -20px;padding: 10px;">
               <h1 id="member-name" style="font-size: 1.5rem; font-family: 'Quicksand';"></h1>
